--- a/rollout/cli_tools_cloudbuild_deploy_rollback.yaml
+++ b/rollout/cli_tools_cloudbuild_deploy_rollback.yaml
@@ -3,10 +3,10 @@ timeout: 5400s
 options:
 
 steps:
-# Deploy given tools to given locations. Expect 2 vars substitutions, examples:
+# Rollback given tools to given locations. Expect 2 vars substitutions, examples:
 # 1. $_REGIONS="us;us-east1;us-east2"
 # 2. $_TOOLS="gve_vm_image_import;gce_vm_image_export"
-# The script will pull the built docker images from gcr.io (container registry),
+# The script will pull the built docker images with "prev-release" tag from gcr.io (container registry),
 # and then push to artifacts registry (e.g. us-east1-docker.pkg.dev/compute-image-tools/wrappers/gce_vm_image_import)
 # with 3 tags: the workflow execution ID, the commit SHA, and the "release".
 # 1. The workflow execution ID is used to track which workflow produced the image.
@@ -21,22 +21,13 @@ steps:
     REGIONS_ARR=$(echo "$_REGIONS" | tr ";" "\n")
     TOOLS_ARR=$(echo "$_TOOLS" | tr ";" "\n")
 
-    for _TOOL in $$TOOLS_ARR
-    do
-      echo "----> Preparing docker images for $$_TOOL..."
-      docker pull gcr.io/$_IMAGE_PROJECT/$$_TOOL:$_WORKFLOW_EXECUTION_ID || exit 1
-    done
-
-
     for _REGION in $$REGIONS_ARR
     do
       for _TOOL in $$TOOLS_ARR
       do
-        echo "--> Deploying... $$_TOOL -> $$_REGION"
+        echo "--> Rollback... $$_TOOL -> $$_REGION"
 
-        gcloud container images add-tag gcr.io/$_IMAGE_PROJECT/$$_TOOL:release $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:$_WORKFLOW_EXECUTION_ID -q
-        gcloud container images add-tag gcr.io/$_IMAGE_PROJECT/$$_TOOL:release $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:$COMMIT_SHA -q
-        gcloud container images add-tag gcr.io/$_IMAGE_PROJECT/$$_TOOL:release $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:release -q
+        crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:prev-release release -q
       done
-      echo "----> Deployed all tools for $$_REGION"
+      echo "----> Rollback all tools for $$_REGION done."
     done
