--- a/rollout/cli_tools_cloudbuild_deploy.yaml
+++ b/rollout/cli_tools_cloudbuild_deploy.yaml
@@ -13,13 +13,21 @@ steps:
 # It's specifically useful when the original workflow was failed and we resumed it.
 # 2. The commit SHA is used to track which version of source code produced the image.
 # 3. The "release" tag marks it as the current effective image.
-- name: 'google/cloud-sdk:alpine'
+- name: 'gcr.io/go-containerregistry/crane'
   args:
   - 'bash'
   - '-c'
   - |
     REGIONS_ARR=$(echo "$_REGIONS" | tr ";" "\n")
     TOOLS_ARR=$(echo "$_TOOLS" | tr ";" "\n")
+
+    exit_on_error() {
+      ERR=$1
+      if [[ $ERR != 0 ]]; then
+      echo "Deploy failed with exit code $ERR. Please check the error message, debug and rerun."
+      exit "$ERR"
+      fi
+    }
 
     for _REGION in $$REGIONS_ARR
     do
@@ -29,11 +37,15 @@ steps:
 
         # Mark current "release" as "prev-release" for rollback.
         crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:release prev-release
+        exit_on_error $?
 
         # Copy the new "release" from gcr.io.
         crane copy gcr.io/$_IMAGE_PROJECT/$$_TOOL:release $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:release
+        exit_on_error $?
         crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:release $_WORKFLOW_EXECUTION_ID
+        exit_on_error $?
         crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:release $COMMIT_SHA
+        exit_on_error $?
       done
       echo "----> Deployed all tools for $$_REGION"
     done
