--- a/rollout/cli_tools_cloudbuild_deploy_rollback.yaml
+++ b/rollout/cli_tools_cloudbuild_deploy_rollback.yaml
@@ -13,13 +13,21 @@ steps:
 # It's specifically useful when the original workflow was failed and we resumed it.
 # 2. The commit SHA is used to track which version of source code produced the image.
 # 3. The "release" tag marks it as the current effective image.
-- name: 'google/cloud-sdk:alpine'
+- name: 'gcr.io/go-containerregistry/crane'
   args:
   - 'bash'
   - '-c'
   - |
     REGIONS_ARR=$(echo "$_REGIONS" | tr ";" "\n")
     TOOLS_ARR=$(echo "$_TOOLS" | tr ";" "\n")
+
+    exit_on_error() {
+      ERR=$1
+      if [[ $ERR != 0 ]]; then
+      echo "Rollback failed with exit code $ERR. Please check the error message, debug and rerun."
+      exit "$ERR"
+      fi
+    }
 
     for _REGION in $$REGIONS_ARR
     do
@@ -28,6 +36,7 @@ steps:
         echo "--> Rollback... $$_TOOL -> $$_REGION"
 
         crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:prev-release release -q
+        exit_on_error $?
       done
       echo "----> Rollback all tools for $$_REGION done."
     done
