--- a/rollout/cli_tools_cloudbuild_deploy_rollback.yaml
+++ b/rollout/cli_tools_cloudbuild_deploy_rollback.yaml
@@ -33,7 +33,7 @@ steps:
       do
         echo "--> Rollback... $$_TOOL -> $$_REGION"
 
-        docker run --rm gcr.io/go-containerregistry/crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:prev-release release
+        docker run --rm gcr.io/go-containerregistry/crane tag $$_REGION-docker.pkg.dev/$_IMAGE_PROJECT/$$_TOOL:prev-release release -q
         exit_on_error $$?
       done
       echo "----> Rollback all tools for $$_REGION done."
@@ -43,7 +43,7 @@ steps:
     do
       echo "--> Rollback... $$_TOOL -> gcr.io"
 
-      docker run --rm gcr.io/go-containerregistry/crane tag gcr.io/$_IMAGE_PROJECT/$$_TOOL:prev-release release
+      docker run --rm gcr.io/go-containerregistry/crane tag gcr.io/$_IMAGE_PROJECT/$$_TOOL:prev-release release -q
       exit_on_error $$?
     done
     echo "----> Rollback all tools for gcr.io done."
