--- a/daisy_workflows/image_build/sqlserver/configs/sql_server_2016.ini
+++ b/daisy_workflows/image_build/sqlserver/configs/sql_server_2016.ini
@@ -77,7 +77,7 @@ ASCOLLATION="Latin1_General_CI_AS"
 ASPROVIDERMSOLAP="1"
 
 ; Specifies the list of administrator accounts that need to be provisioned.
-ASSYSADMINACCOUNTS="USERS"
+ASSYSADMINACCOUNTS="BUILTIN\ADMINISTRATORS"
 
 ; Specifies the server mode of the Analysis Services instance. Valid values are MULTIDIMENSIONAL and TABULAR. The default value is MULTIDIMENSIONAL.
 ASSERVERMODE="MULTIDIMENSIONAL"
