--- a/daisy_workflows/image_build/sqlserver/configs/sql_server_2019.ini
+++ b/daisy_workflows/image_build/sqlserver/configs/sql_server_2019.ini
@@ -219,7 +219,7 @@ SQLSVCINSTANTFILEINIT="False"
 
 ; Windows account(s) to provision as SQL Server system administrators.
 
-SQLSYSADMINACCOUNTS="BUILTIN\Users"
+SQLSYSADMINACCOUNTS="BUILTIN\ADMINISTRATORS"
 
 ; The number of Database Engine TempDB files.
 
