--- a/daisy_workflows/image_build/sqlserver/configs/sql_server_2017_core.ini
+++ b/daisy_workflows/image_build/sqlserver/configs/sql_server_2017_core.ini
@@ -107,7 +107,7 @@ SQLCOLLATION="SQL_Latin1_General_CP1_CI_AS"
 SQLSVCACCOUNT="NT Service\MSSQLSERVER"
 
 ; Windows account(s) to provision as SQL Server system administrators.
-SQLSYSADMINACCOUNTS="USERS"
+SQLSYSADMINACCOUNTS="BUILTIN\ADMINISTRATORS"
 
 ; Specify 0 to disable or 1 to enable the TCP/IP protocol.
 TCPENABLED="1"
