Add CRB repo to CentOS Stream 9 build.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos-stream-9-options.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos-stream-9-options.cfg
@@ -5,6 +5,7 @@
 text --non-interactive
 url --url="http://mirror.stream.centos.org/9-stream/BaseOS/$basearch/os"
 repo --name=AppStream --baseurl="http://mirror.stream.centos.org/9-stream/AppStream/$basearch/os"
+repo --name=CRB --baseurl="http://mirror.stream.centos.org/9-stream/CRB/$basearch/os"
 poweroff
 
 # Network configuration
