Only import the Google GPG keys. Existing keys will error out.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/el9-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/el9-post.cfg
@@ -13,7 +13,7 @@ userdel -r gce
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-rpm --import /etc/pki/rpm-gpg/*
+rpm --import /etc/pki/rpm-gpg/google*
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
