Temporarily allow SHA1 sig checking in EL9.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/el9-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/el9-post.cfg
@@ -10,6 +10,10 @@ exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
 
+# TODO remove this!
+# Set crypto-policies to LEGACY to allow SHA1 signature checking
+update-crypto-policies --set LEGACY
+
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
