--- a/rollout/cli_tools_cloudbuild_release_workflow.yaml
+++ b/rollout/cli_tools_cloudbuild_release_workflow.yaml
@@ -11,7 +11,7 @@ steps:
         --project=$PROJECT_ID
         --data="{
           \"rolloutPhase\":{$_ROLLOUT_PHASES},
-          \"tools\":\"gce_vm_image_import;gce_vm_image_export;gce_onestep_image_import;gce_ovf_import;gce_ovf_export;gce_windows_upgrade\",
+          \"tools\":\"gce_windows_upgrade\",
           \"tagName\":\"$TAG_NAME\",
           \"waitPeriod\":\"$_WAIT_PERIOD\",
           \"skipValidation\":\"$_SKIP_VALIDATION\"
