rhua: update create-dirs.conf

--- a/daisy_workflows/build-publish/rhui/rhua_artifacts/create-dirs.conf
+++ b/daisy_workflows/build-publish/rhui/rhua_artifacts/create-dirs.conf
@@ -1,4 +1,11 @@
 [Service]
-ExecStartPre=mkdir -p /var/lib/rhui/remote_share/pulp3/artifact
-ExecStartPre=mkdir -p /var/lib/rhui/remote_share/pulp3/tmp
-ExecStartPre=mkdir -p /var/lib/rhui/remote_share/pulp3/upload
+PermissionsStartOnly=true
+ExecStartPre=mkdir -p \
+             /var/lib/rhui/remote_share/pulp3/artifact \
+             /var/lib/rhui/remote_share/pulp3/tmp \
+             /var/lib/rhui/remote_share/pulp3/upload
+ExecStartPre=chown pulp:pulp \
+             /var/lib/rhui/remote_share/pulp3 \
+             /var/lib/rhui/remote_share/pulp3/artifact \
+             /var/lib/rhui/remote_share/pulp3/tmp \
+             /var/lib/rhui/remote_share/pulp3/upload
