--- a/daisy_workflows/build-publish/rhui/cds_artifacts/rhui-health-check.service
+++ b/daisy_workflows/build-publish/rhui/cds_artifacts/rhui-health-check.service
@@ -5,8 +5,7 @@ Description=CDS health check
 Type=oneshot
 ExecStart=python3 /opt/google-rhui-infra/health_check.py \
     --node cds \
-    --result_file /usr/share/nginx/html/google_rhui_health_check.txt \
-    --nfs_mount /var/lib/rhui/remote_share
+    --result_file /usr/share/nginx/html/google_rhui_health_check.txt
 
 [Install]
 WantedBy=multi-user.target
