Use the real cloud SIG repo.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky-linux-optimized-gcp-8-options.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky-linux-optimized-gcp-8-options.cfg
@@ -3,10 +3,10 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://download.rockylinux.org/pub/rocky/8/BaseOS/x86_64/os"
-repo --name=AppStream --baseurl="https://download.rockylinux.org/pub/rocky/8/AppStream/x86_64/os"
-repo --name=PowerTools --baseurl="https://download.rockylinux.org/pub/rocky/8/PowerTools/x86_64/os"
-repo --name=gcp8kernel --baseurl="https://elasticrepo.build.ctrliq.cloud/v1/public/subscriptions/gcp8/Kernel/x86_64"
+url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$arch/os"
+repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$arch/os"
+repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$arch/os"
+repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$arch"
 poweroff
 
 # Network configuration
