--- a/daisy_workflows/image_build/enterprise_linux/kickstart/el9-post.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/el9-post.cfg
@@ -1,4 +1,4 @@
-# Google Compute Engine kickstart config for Enterprise Linux 8.
+# Google Compute Engine kickstart config for Enterprise Linux 9.
 %onerror
 echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
@@ -32,7 +32,7 @@ EOL
 # Disable IPv6 for DNF.
 echo "ip_resolve=4" >> /etc/dnf/dnf.conf
 
-# Set google-compute-engine config for EL8.
+# Set google-compute-engine config for EL9.
 cat >>/etc/default/instance_configs.cfg.distro << EOL
 # Disable boto plugin setup.
 [InstanceSetup]
@@ -41,9 +41,13 @@ EOL
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
+# Re-enable the cloud SDK repo
+dnf config-manager --set-enabled google-cloud-sdk
 dnf install -y google-cloud-sdk
+rpm -q google-cloud-sdk
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -56,25 +60,29 @@ rm -f /etc/boto.cfg /etc/udev/rules.d/70-persistent-net.rules
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens4
 
 # Disable password authentication by default.
-sed -i -e '/PasswordAuthentication yes/s/^.*/PasswordAuthentication no/' /etc/ssh/sshd_config
+sed -i'' -e '/PasswordAuthentication yes/s/^.*/PasswordAuthentication no/' /etc/ssh/sshd_config
 
 # Set ServerAliveInterval and ClientAliveInterval to prevent SSH
 # disconnections. The pattern match is tuned to each source config file.
 # The $'...' quoting syntax tells the shell to expand escape characters.
-sed -i -e $'/^\tServerAliveInterval/d' /etc/ssh/ssh_config
-sed -i -e $'/^Host \\*$/a \\\tServerAliveInterval 420' /etc/ssh/ssh_config
-sed -i -e '/ClientAliveInterval/s/^.*/ClientAliveInterval 420/' /etc/ssh/sshd_config
+sed -i'' -e $'/^\tServerAliveInterval/d' /etc/ssh/ssh_config
+sed -i'' -e $'/^Host \\*$/a \\\tServerAliveInterval 420' /etc/ssh/ssh_config
+sed -i'' -e '/ClientAliveInterval/s/^.*/ClientAliveInterval 420/' /etc/ssh/sshd_config
 
 # Disable root login via SSH by default.
-sed -i -e '/PermitRootLogin prohibit-password/s/^.*/PermitRootLogin no/' /etc/ssh/sshd_config
+sed -i'' -e '/PermitRootLogin prohibit-password/s/^.*/PermitRootLogin no/' /etc/ssh/sshd_config
 
 # Update all packages.
 dnf -y update
 
+# If package update above involved a kernel package, it might not have properly set kernel command line
+# options, instead pulling from /proc/cmdline on the installer VM. Recreate boot loader options here.
+grub2-mkconfig
+
 # Make changes to dnf automatic.conf
 # Apply updates for security (RHEL) by default. NOTE this will not work in CentOS.
-sed -i 's/upgrade_type =.*/upgrade_type = security/' /etc/dnf/automatic.conf
-sed -i 's/apply_updates =.*/apply_updates = yes/' /etc/dnf/automatic.conf
+sed -i'' 's/upgrade_type =.*/upgrade_type = security/' /etc/dnf/automatic.conf
+sed -i'' 's/apply_updates =.*/apply_updates = yes/' /etc/dnf/automatic.conf
 # Enable the DNF automatic timer service.
 systemctl enable dnf-automatic.timer
 
