Make the CloudSIG repo available on the image.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky-linux-optimized-gcp-8-options.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky-linux-optimized-gcp-8-options.cfg
@@ -6,7 +6,7 @@ text --non-interactive
 url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$arch/os"
 repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$arch/os"
 repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$arch/os"
-repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$arch"
+repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$arch" --install
 poweroff
 
 # Network configuration
