Rewrite kickstart configs for EL image builds (#1936)
* delete old kickstart

* add new kickstart

* update workflows

* update installer script

* remove ks_helpers.py

* flake8 presubmit

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_7_7_sap.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_7_7_sap.cfg
@@ -1,3 +1,151 @@
+# rhel7-options.cfg
+
+### Anaconda installer configuration.
+# Install in cmdline mode.
+cmdline
+harddrive --partition=sda2 --dir=/
+poweroff
+
+# Network configuration
+network --bootproto=dhcp --hostname=localhost --device=link
+
+### Disk configuration.
+# The bootloader must be set to sdb since sda is the installer.
+bootloader --boot-drive=sdb --timeout=0 --append="net.ifnames=0 biosdevname=0 scsi_mod.use_blk_mq=Y"
+# EFI partitioning, creates a GPT partitioned disk.
+clearpart --drives=sdb --all
+part /boot/efi --size=200 --fstype=efi --ondrive=sdb
+part / --size=100 --grow --ondrive=sdb --label=root --fstype=xfs
+
+### Installed system configuration.
+firewall --enabled
+services --enabled=sshd --disabled=sshd-keygen@
+skipx
+timezone --utc UTC --ntpservers=metadata.google.internal
+rootpw --iscrypted --lock *
+firstboot --disabled
+user --name=gce --lock
+
+# el7-packages.cfg
+# Contains a list of packages to be installed, or not, on all flavors.
+# The %package command begins the package selection section of kickstart.
+# Packages can be specified by group, or package name. @Base and @Core are
+# always selected by default so they do not need to be specified.
+
+%packages
+acpid
+net-tools
+openssh-server
+vim
+# Make sure that subscription-manager and rhn packages are not installed as
+# they conflict with GCE packages.
+-subscription-manager
+-*rhn*
+-alsa-utils
+-b43-fwcutter
+-dmraid
+-eject
+-gpm
+-kexec-tools
+-irqbalance
+-microcode_ctl
+-smartmontools
+-aic94xx-firmware
+-atmel-firmware
+-b43-openfwwf
+-bfa-firmware
+-ipw2100-firmware
+-ipw2200-firmware
+-ivtv-firmware
+-iwl100-firmware
+-iwl1000-firmware
+-iwl3945-firmware
+-iwl4965-firmware
+-iwl5000-firmware
+-iwl5150-firmware
+-iwl6000-firmware
+-iwl6000g2a-firmware
+-iwl6050-firmware
+-kernel-firmware
+-libertas-usb8388-firmware
+-ql2100-firmware
+-ql2200-firmware
+-ql23xx-firmware
+-ql2400-firmware
+-ql2500-firmware
+-rt61pci-firmware
+-rt73usb-firmware
+-xorg-x11-drv-ati-firmware
+-zd1211-firmware
+%end
+
+%post
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-compute-engine]
+name=Google Compute Engine
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el7-x86_64-stable
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sdk]
+name=Google Cloud SDK
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el7-x86_64
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
+%end
+%post --log=/dev/ttyS0
+# Peg to RHEL 7.7
+echo "7.7" > /etc/yum/vars/releasever
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+yum -y install google-rhui-client-rhel7-sap
+%end
+
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+
+# Configure SAP HANA packages.
+SAP_PKGS="
+compat-sap-c++-5
+compat-sap-c++-6
+compat-sap-c++-7
+libatomic
+libtool-ltdl
+lvm2
+numactl
+numactl-libs
+nfs-utils
+pacemaker
+pcs
+resource-agents
+resource-agents-sap
+resource-agents-sap-hana
+sapconf
+tuned-profiles-sap
+tuned-profiles-sap-hana
+unar
+"
+
+yum install -y ${SAP_PKGS}
+yum install -y fence-agents-gce resource-agents-gcp
+rpm -q ${SAP_PKGS} fence-agents-gce resource-agents-gcp
+echo "done with rhel-7-sap-post.cfg"
+# Must have newline before end directive
+
+%end
+
 # Google Compute Engine kickstart config for Enterprise Linux 7.
 %onerror
 echo "Build Failed!" > /dev/ttyS0
@@ -115,3 +263,10 @@ dracut -f --kver="${kver}"
 # Fix selinux contexts on /etc/resolv.conf.
 restorecon /etc/resolv.conf
 %end
+
+# Cleanup.
+%post --nochroot --log=/dev/ttyS0
+set -x
+rm -Rf /mnt/sysimage/tmp/*
+%end
+
