--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_optimized_gcp_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_optimized_gcp_8.cfg
@@ -3,10 +3,10 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$arch/os"
-repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$arch/os"
-repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$arch/os"
-repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$arch"
+url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os"
+repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$basearch/os"
+repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$basearch/os"
+repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch"
 poweroff
 
 # Network configuration
