Add in correct repo spec for the Cloud SIG. (#1939)
* Add in correct repo spec for the Cloud SIG.

* Fix basearch

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_optimized_gcp_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_optimized_gcp_8.cfg
@@ -3,10 +3,10 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$arch/os"
-repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$arch/os"
-repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$arch/os"
-repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$arch" --install
+url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os"
+repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$basearch/os"
+repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$basearch/os"
+repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch"
 poweroff
 
 # Network configuration
@@ -103,6 +103,15 @@ gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
+# Rocky Linux Cloud SIG repo.
+tee -a /etc/yum.repos.d/Rocky-CloudSig.repo << EOM
+[cloud-sig]
+name=Rocky Linux \$releasever - Cloud SIG
+baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch
+enabled=1
+gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-rockyofficial
 EOM
 %end
 # Google Compute Engine kickstart config for Enterprise Linux 8.
