Add correct SIG repo key.

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_optimized_gcp_8.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_optimized_gcp_8.cfg
@@ -111,7 +111,7 @@ name=Rocky Linux \$releasever - Cloud SIG
 baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch
 enabled=1
 gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-rockyofficial
+gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/RPM-GPG-KEY-Rocky-8-SIG-Cloud
 EOM
 %end
 # Google Compute Engine kickstart config for Enterprise Linux 8.
