--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
@@ -1,4 +1,4 @@
-# rocky-linux-8-options.cfg
+# rocky-linux-8-optimized-gcp-options.cfg
 
 ### Anaconda installer configuration.
 # Install in text mode.
