add sdk to el9 build

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_9_arm64.cfg
@@ -92,16 +92,16 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 # TODO: re-enable by uncommenting once sdk for arm is available
-#tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-#[google-cloud-sdk]
-#name=Google Cloud SDK
-#baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-\$basearch
-#enabled=1
-#gpgcheck=1
-#repo_gpgcheck=0
-#gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-#       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-#EOM
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sdk]
+name=Google Cloud SDK
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-\$basearch
+enabled=1
+gpgcheck=1
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
 %end
 %post --erroronfail
 set -x
@@ -156,8 +156,8 @@ dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
 
 # Install the Cloud SDK package.
-#dnf install -y google-cloud-sdk
-#rpm -q google-cloud-sdk
+dnf install -y google-cloud-sdk
+rpm -q google-cloud-sdk
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
