--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
@@ -6,7 +6,7 @@ text --non-interactive
 url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os"
 repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$basearch/os"
 repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$basearch/os"
-repo --name=CloudSig --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch"
+repo --name=CloudKernel --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch/cloud-kernel"
 poweroff
 
 # Network configuration
@@ -104,14 +104,14 @@ repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
-# Rocky Linux Cloud SIG repo.
-tee -a /etc/yum.repos.d/Rocky-CloudSig.repo << EOM
+# Rocky Linux Cloud Kernel repo.
+tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
 [cloud-sig]
-name=Rocky Linux \$releasever - Cloud SIG
-baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch
+name=Rocky Linux \$releasever - Cloud Kernel
+baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel
 enabled=1
 gpgcheck=1
-gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/RPM-GPG-KEY-Rocky-8-SIG-Cloud
+gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 EOM
 %end
 # Google Compute Engine kickstart config for Enterprise Linux 8.
@@ -129,7 +129,7 @@ userdel -r gce
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-curl -o /etc/pki/rpm-gpg/RPM-GPG-KEY-Rocky-8-SIG-Cloud https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/RPM-GPG-KEY-Rocky-8-SIG-Cloud
+curl -o /etc/pki/rpm-gpg/RPM-GPG-KEY-Rocky-8-SIG-Cloud https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 rpm --import /etc/pki/rpm-gpg/*
 
 # Configure the network for GCE.
