--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
@@ -112,6 +112,7 @@ baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-ke
 enabled=1
 gpgcheck=1
 gpgkey=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+priority=-1
 EOM
 %end
 # Google Compute Engine kickstart config for Enterprise Linux 8.
@@ -129,7 +130,7 @@ userdel -r gce
 # Import all RPM GPG keys.
 curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-curl -o /etc/pki/rpm-gpg/RPM-GPG-KEY-Rocky-8-SIG-Cloud https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+curl -o /etc/pki/rpm-gpg/RPM-GPG-KEY-Rocky-SIG-Cloud https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 rpm --import /etc/pki/rpm-gpg/*
 
 # Configure the network for GCE.
