--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
@@ -3,7 +3,7 @@
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os"
+repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/8/BaseOS/$basearch/os" --excludepkgs="kernel,kernel-core"
 repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/$basearch/os"
 repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/$basearch/os"
 repo --name=CloudKernel --baseurl="https://dl.rockylinux.org/pub/sig/8/cloud/$basearch/cloud-kernel"
