--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp.cfg
@@ -106,7 +106,7 @@ gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
 EOM
 # Rocky Linux Cloud Kernel repo.
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
-[cloud-sig]
+[cloud-kernel]
 name=Rocky Linux \$releasever - Cloud Kernel
 baseurl=https://dl.rockylinux.org/pub/sig/\$releasever/cloud/\$basearch/cloud-kernel
 enabled=1
